@startuml Class_diagram
left to right direction
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

title Diagramme de classe — Metier


' ----------------------------------------------
' Toutes les classes (metier?)

abstract class Person {
  + FirstName : string
  + LastName : string
  + DateOfBirth : string
  + Mail : string
  + Phone : string
}

class Player {
  + Elo : int
  + Player_id : int
}

enum GameResult {
  Player1Win
  Player2Win
  Draw
}

abstract class Game {
  + Match_id : int
  + Result : GameResult
}

enum ChessColor {
  White
  Black
}


class ChessGame {
  + Player1Color : ChessColor
  + Moves : List[string]
}

abstract class Tournament {
  + TournamentName : string
  + Location : string
  + StartDate : string
  + EndDate : string
  + MaxNumberPlayer : int
  + Description : string
  + EntryFee : int
  + PrizePool : int
}

class Chess_Tournament {
  + CompetitionType : string
  + TimeControl : string
  + Tournament_id : string
}

class EloService {
  + Apply(g : Game) : void
  - {static} Expected(rating : int) : double
  - {static} ScoreForPlayer1(result : GameResult) : double
  - {static} KFactor(rating : int) : int
  - {static} CapRatingDiff(r1 : int, r2 : int) : int
}

' ---------------------------------------------------------------
' Inheritance (HERITAGE)
Person <|-up- Player
Game <|-up- ChessGame
Tournament <|-right- Chess_Tournament

' ---------------------------------------------------------------
' Associations 
' Les vies des objets ne sont pas dépendantes
' Une partie a exactement 2 joueurs, et un joueur peut jouer 0 a .. parties
Game  "0.." -- "2" Player 


' Inscriptions: un tournoi a des joueurs inscrits, un joueur peut participer à
'  plusieurs tournois et dans un tournoi il y a MaxnumberPlayer de joueur
Chess_Tournament "0.." -- "MaxNumberPlayer"  Player 

' ------------------------------------------------------------------------------------
'compostion

' Un tournoi contient des parties, une partie appartient à un tournoi 
' Une partie ne peut exister sans tournoi
' il y a 0.. game par tournoi
Chess_Tournament "1" *-- "0.." ChessGame 


'-------------------------------------------------------------------------------------
'Dependance
' Le service ELO agit sur des parties et met à jour les joueurs
' elle depend de Player et de Game donc c est une dependance
EloService .up.> Game
EloService .up.> Player



Player -[hidden]right- ChessGame
Player -[hidden]up- Tournament

Chess_Tournament -[hidden]right- ChessGame

GameResult -[hidden]left- EloService
GameResult -[hidden]up- ChessColor

legend left
<b>Légende</b>
----
A : Classe abstraite
C : Classe concrète
E : Enum
<u>static</u>
endlegend

@enduml
